ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/CnP_PaaS__Invoice_Policy__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Invoice Policy</label>
    <nameField>
        <label>Invoice Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Invoice Policy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>