ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__C_P_Replay_To_Address__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__C_P_Replay_To_Address__c</fullName>
    <label>C&amp;P Replay To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>