ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__ClickandPledge_SMTP__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__ClickandPledge_SMTP__c</fullName>
    <label>C&amp;P ClickandPledge SMTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>