ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__CnP_Mail_From_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Mail_From_Name__c</fullName>
    <label>C&amp;P Mail From Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>