ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__Custom_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Custom_Payment_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Payment Type</label>
    <type>Checkbox</type>
</CustomField>