ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__Decline__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Decline__c</fullName>
    <label>Decline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>