ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__Declined_Invoice_Stage__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Declined_Invoice_Stage__c</fullName>
    <label>Declined Invoice Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>