ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Template</label>
    <referenceTo>CnP_PaaS__CnP_Designer__c</referenceTo>
    <relationshipName>Invoice_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>