ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__Internal_Alerts__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Internal_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Alerts</label>
    <type>Checkbox</type>
</CustomField>