ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__Net__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Net__c</fullName>
    <label>Net</label>
    <length>255</length>
    <type>Text</type>
</CustomField>