ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__Paid_Invoice__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Paid_Invoice__c</fullName>
    <label>Paid Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Customer-Replace</fullName>
            </value>
            <value>
                <fullName>Existing Customer-Upgrade</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>