ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__Send_To__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Send_To__c</fullName>
    <label>Send To</label>
    <type>Email</type>
</CustomField>