ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__SMTP_settings__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMTP_settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P SMTP settings</label>
    <referenceTo>CnP_PaaS__SMTP_settings__c</referenceTo>
    <relationshipLabel>C&amp;P Invoice Policy</relationshipLabel>
    <relationshipName>C_P_Invoice_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>