ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Terms_Conditions__c</fullName>
    <label>Terms &amp; Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>