ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Policy__c/fields/CnP_PaaS__Transcation_date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Transcation_date__c</fullName>
    <label>Transcation date</label>
    <type>Date</type>
</CustomField>